src/app/result-style.css
.result {
    position: relative;
    overflow: hidden;
    width: 640px;

    max-height: 640px;

    .background,
    .additional-img {
        top: 0;
        left: 0;
        width: auto;
        width: 100%;
        height: 100%;
        max-width: 1000px;
        max-height: 600px;
    }

    .background {
        z-index: 10;
        object-fit: contain;
        background-color: black;
    }

    .additional-img {
        position: absolute;
        z-index: 11;
        object-fit: contain;
    }

    .quote,
    .author-work {
        position: absolute;
        z-index: 12;
        background: linear-gradient(to top right, rgba(0, 0, 0, .5), transparent);
        padding: 5px;
        border-radius: 10px;
        text-shadow: 0 5px 5px black;
    }

    .author-work {
        display: flex;
        flex-direction: column;
        bottom: 30px;
        right: 30px;

        .author {
            font-weight: bold;
            text-align: right;
            font-size: 1.2em;
        }

        .work-name {
            font-style: italic;
            font-size: 1.1em;
        }
    }

    .quote {
        top: 5%;
        left: 50%;
        font-size: 3em;
        width: 90%;
    }
}

